// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rename should change the name of a field 1`] = `
"type Query {
  user: MyUser!
  my_book: MyBook!
  profile(profile_id: ID!, role: String, some_argument: String, another_argument: Int): Profile
}

type MyUser {
  id: ID!
}

type Profile {
  id: ID!
}

type MyBook {
  id: ID!
}"
`;

exports[`rename should change the name of a type 1`] = `
"type Query {
  my_user: User!
  my_book: MyBook!
  profile(profile_id: ID!, role: String, some_argument: String, another_argument: Int): Profile
}

type User {
  id: ID!
}

type Profile {
  id: ID!
}

type MyBook {
  id: ID!
}"
`;

exports[`rename should change the name of multiple fields 1`] = `
"type Query {
  user: MyUser!
  book: MyBook!
  profile(profile_id: ID!, role: String, some_argument: String, another_argument: Int): Profile
}

type MyUser {
  id: ID!
}

type Profile {
  id: ID!
}

type MyBook {
  id: ID!
}"
`;

exports[`rename should change the name of multiple type names 1`] = `
"type Query {
  my_user: User!
  my_book: Book!
  profile(profile_id: ID!, role: String, some_argument: String, another_argument: Int): Profile
}

type User {
  id: ID!
}

type Profile {
  id: ID!
}

type Book {
  id: ID!
}"
`;

exports[`rename should only affect field argument only if type and field are specified 1`] = `
"type Query {
  my_user: MyUser!
  my_book: MyBook!
  profile(profile_id: ID!, role: String, some_argument: String, another_argument: Int): Profile
}

type MyUser {
  id: ID!
}

type Profile {
  id: ID!
}

type MyBook {
  id: ID!
}"
`;

exports[`rename should only affect specified field argument 1`] = `
"type Query {
  my_user: MyUser!
  my_book: MyBook!
  profile(profileId: ID!, role: String, some_argument: String, another_argument: Int): Profile
}

type MyUser {
  id: ID!
}

type Profile {
  id: ID!
}

type MyBook {
  id: ID!
}"
`;

exports[`rename should only affect specified match type and match field argument 1`] = `
"type Query {
  my_user: MyUser!
  my_book: MyBook!
  profile(profileId: ID!, role: String, some_argument: String, another_argument: Int): Profile
}

type MyUser {
  id: ID!
}

type Profile {
  id: ID!
}

type MyBook {
  id: ID!
}"
`;

exports[`rename should only affect specified type 1`] = `
"type Query {
  my_user: MyUser!
  my_bok: MyBook!
  prfile(profile_id: ID!, role: String, some_argument: String, another_argument: Int): Profile
}

type MyUser {
  id: ID!
}

type Profile {
  id: ID!
}

type MyBook {
  id: ID!
}"
`;

exports[`rename should replace all occurrences of a substring in a field 1`] = `
"type Query {
  user_v1: ApiUserV1Api!
}

type ApiUserV1Api {
  id: ID!
}"
`;

exports[`rename should replace all occurrences of a substring in a type 1`] = `
"type Query {
  api_user_v1_api: UserV1!
}

type UserV1 {
  id: ID!
}"
`;

exports[`rename should replace all occurrences of multiple substrings in a field 1`] = `
"type Query {
  user: ApiUserV1Api!
}

type ApiUserV1Api {
  id: ID!
}"
`;

exports[`rename should replace all occurrences of multiple substrings in a type 1`] = `
"type Query {
  api_user_v1_api: User!
}

type User {
  id: ID!
}"
`;

exports[`rename should replace the first occurrence of a substring in a field 1`] = `
"type Query {
  my_user: MyUser!
  my_bok: MyBook!
  prfile(profile_id: ID!, role: String, some_argument: String, another_argument: Int): Profile
}

type MyUser {
  id: ID!
}

type Profile {
  id: ID!
}

type MyBook {
  id: ID!
}"
`;
